crimson/osd: notify waiters if pool for creating pg does not exist

Fixes: https://tracker.ceph.com/issues/57740
Signed-off-by: Samuel Just <sjust@redhat.com>